--- a/static/styles.css
+++ b/static/styles.css
@@ -39,7 +39,7 @@ input[type="text"] {
 }
 
 button {
-    background-color: #3498db;
+    background-color: #212121;
     color: white;
     border: none;
     padding: 10px 15px;
@@ -52,21 +52,22 @@ button:hover {
     background-color: #2980b9;
 }
 
-.error {
+.error-container {
+    background-color: #fadbd8;
+    margin-top: 15px;
     color: #e74c3c;
     padding: 10px;
-    background-color: #fadbd8;
-    border-radius: 4px;
-    margin-top: 15px;
+    border-radius: 5px;
+
 }
 
-.result-section {
+.result-container {
     margin-bottom: 20px;
     padding-bottom: 20px;
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid #afa5a5;
 }
 
-.result-section:last-child {
+.result-container:last-child {
     border-bottom: none;
 }
 
@@ -74,7 +75,7 @@ button:hover {
     display: inline-block;
     margin-top: 20px;
     text-decoration: none;
-    color: #3498db;
+    color: #0035f7;
 }
 
 .back-button:hover {
@@ -82,5 +83,19 @@ button:hover {
 }
 
 ul {
+    padding-left: 20px;
+}
+
+.scroll-list {
+    max-height: 200px;
+    overflow-y: auto;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 10px;
+    background-color: #f9f9f9;
+}
+
+.scroll-list ul {
+    margin: 0;
     padding-left: 20px;
 }
